Thu Aug  2 12:47:16 2001                        Michael Jennings (mej)

Now working a few small kinks out of the parallel build.
----------------------------------------------------------------------
Thu Aug  2 20:09:57 2001                        Michael Jennings (mej)

Not only are parallel builds now working, but it can once again
rebuild our entire 7.1.1 distro.  Woo-ha!
----------------------------------------------------------------------
Thu Aug  9 21:03:34 2001                        Michael Jennings (mej)

revtool rewrite along with the new revision control module.
----------------------------------------------------------------------
Thu Aug  9 23:02:59 2001                        Michael Jennings (mej)

Haha!  "avbuild" works again! :)
----------------------------------------------------------------------
Mon Aug 13 17:02:57 2001                        Michael Jennings (mej)

Packages can now have their own product files which are picked up by
the build.
----------------------------------------------------------------------
Mon Aug 13 17:25:35 2001                        Michael Jennings (mej)

Finalized the 0.8 version by making sure pkgtool groks "avbuild."
----------------------------------------------------------------------
Tue Aug 14 12:35:10 2001                        Michael Jennings (mej)

Getting pkgtool into full working order.  Next is srctool....
----------------------------------------------------------------------
Tue Aug 14 17:54:45 2001                        Michael Jennings (mej)

Just checking in today's stuff.  This is not necessarily functional.
----------------------------------------------------------------------
Mon Aug 20 10:36:18 2001                        Michael Jennings (mej)

Completely reworked the package variable mechanism.  No more need to
pass every silly parameter under the sun.
----------------------------------------------------------------------